--- a/ChatApp/Views/ChatApp/ChatApp.cshtml
+++ b/ChatApp/Views/ChatApp/ChatApp.cshtml
@@ -2,6 +2,7 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
+    
 }
 <!DOCTYPE html>
 <html lang="en">
@@ -16,7 +17,7 @@
     <link rel="stylesheet" href="~/css/chatBot.css">
 </head>
 <body>
-    <div class="container-fluid customWidth">
+    @* <div class="container-fluid customWidth">
         <div class="row h-100">
             <ul class="nav nav-pills mb-3 bg-dark px-2" id="pills-tab" role="tablist">
                 <li class="nav-item" role="presentation">
@@ -52,7 +53,43 @@
         </div>
 
 
+    </div> *@
+    <div class="container-fluid customWidth">
+        <div class="row h-100 ">
+            <ul class="nav nav-pills mb-3 mynav px-2" id="pills-tab" role="tablist">
+                <li class="nav-item" role="presentation">
+                    <button class="btn myButtons  me-2 my-2" id="openUserList" data-bs-toggle="pill" data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true">Users</button>
+                </li>
+                <li class="nav-item" role="presentation">
+                    <button class="btn myButtons my-2" id="openInductionUserList" data-bs-toggle="pill" data-bs-target="#pills-profile" type="button" role="tab" aria-controls="pills-profile" aria-selected="false">Induction Users</button>
+                </li>
+            </ul>
+        </div>
+
+        <div class="tab-content" id="pills-tabContent">
+            <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="openUserList">
+                <div class="row">
+                    <div class="col-xxl-3 col-sm-3">
+                        <div class="UserListContainer"></div>
+                    </div>
+                    <div class="col-xxl-9 col-sm-9">
+                        <div class="UserChatDetails"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="openInductionUserList">
+                <div class="row">
+                    <div class="col-xxl-3">
+                        <div class="InductionUserListContainer"></div>
+                    </div>
+                    <div class="col-xxl-9">
+                        <div class="InductionUserChatDetails"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
+
 </body>
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
