chat application UI is changed but comments are not removed

--- a/ChatApp/Views/ChatApp/ChatApp.cshtml
+++ b/ChatApp/Views/ChatApp/ChatApp.cshtml
@@ -69,20 +69,25 @@
         <div class="tab-content" id="pills-tabContent">
             <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="openUserList">
                 <div class="row">
-                    <div class="col-xxl-3 col-sm-3">
+                    @* <div class="col-xxl-3 col-sm-3"> *@
+                    <div class="col-md-6 col-lg-5 col-xl-4 mb-4 mb-md-0">
                         <div class="UserListContainer"></div>
                     </div>
-                    <div class="col-xxl-9 col-sm-9">
+                    @* <div class="col-xxl-9 col-sm-9"> *@
+                    <div class="col-md-6 col-lg-7 col-xl-8">
                         <div class="UserChatDetails"></div>
                     </div>
                 </div>
             </div>
             <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="openInductionUserList">
                 <div class="row">
-                    <div class="col-xxl-3">
+                    
+                    @* <div class="col-xxl-3"> *@
+                    <div class="col-md-6 col-lg-5 col-xl-4 mb-4 mb-md-0">
                         <div class="InductionUserListContainer"></div>
                     </div>
-                    <div class="col-xxl-9">
+                    @* <div class="col-xxl-9"> *@
+                    <div class="col-md-6 col-lg-7 col-xl-8">
                         <div class="InductionUserChatDetails"></div>
                     </div>
                 </div>
