--- a/ChatApp/Views/ChatApp/ChatViewForInductionUsers.cshtml
+++ b/ChatApp/Views/ChatApp/ChatViewForInductionUsers.cshtml
@@ -6,7 +6,7 @@
 @{
     // string ToInductionUserGuidString = BitConverter.ToString(@Model.Userid);
 } 
-<div class="bg-outside text-light  mt-5 py-3 px-3">
+@* <div class="bg-outside text-light  mt-5 py-3 px-3">
     <div class="userProfile chat-profile text-light text-center py-2 border-2 border-light borderCustom mb-2 ">
         @Model.FirstName @Model.LastName  (@Model.PhoneNumber)
     </div>
@@ -28,19 +28,6 @@
                 </div>
             }
         </div>
-        @* <div class="message position-absolute bottom-0 width98">
-            <div class="mb-3">
-                <label for="message-text-for-inductionUser" class="form-label mt-2">Write message</label>
-                <textarea class="form-control bg-light text-dark" id="message-text-for-inductionUser" rows="1"
-                          placeholder="Enter your message here.."></textarea>
-            </div>
-            <div>
-                <button class="btn btn-primary border-white BtnHover my-2  text-center" id="post-message-for-inductionUser" data-toInductionUserId="@Model.Userid" type="button">
-                    Send Message
-                    <i class="bi bi-arrow-right-circle-fill"></i>
-                </button>
-            </div>
-        </div> *@
         <div class="position-relative mb-custom" style="height:10% ;">
             <div class="message position-absolute bottom-1 start-50 translate-middle-x width98">
                 <div class="d-flex justify-content-center">
@@ -59,6 +46,51 @@
     </div>
     
 
+</div> *@
+<div class="py-1 px-2 chatListOfInductionUser" style="background-color: #e2e5e5;">
+    <div style="height:80% ; overflow-y: auto;">
+        <ul class="list-unstyled">
+            @foreach (var msg in Model.commonUserModels)
+            {
+                var fullName = Model.creator;
+                var initials = string.Join("", fullName.Split().Select(name => name[0]));
+
+                <li class="d-flex justify-content-between mb-4">
+                    <div class="rounded-circle d-flex align-self-center me-3 shadow-1-strong sender">
+                        <span class="mx-auto my-auto">@initials</span>
+                    </div>
+                    <div class="card ">
+                        <div class="card-header d-flex justify-content-between p-3">
+                            <p class="fw-bold mb-0" style="color:#055160; ">@fullName</p>
+                            <p class="text-muted small mb-0 ms-1">
+                                <i class="bi bi-clock"></i>  @msg.CreationTime?.ToString("dd/MM/yyyy hh:mmtt")
+                            </p>
+                        </div>
+                        <div class="card-body">
+                            <p class="mb-0">
+                                @msg.Sms
+                            </p>
+                        </div>
+                    </div>
+                </li>
+            }
+        </ul>
+    </div>
+    <div class="position-relative mb-custom" style="height:10% ;">
+        <div class="message position-absolute bottom-0 start-50 translate-middle-x width98" style="bottom: 0; height: auto;">
+            <div class="d-flex justify-content-center">
+                <div style="width:80%;">
+                    <textarea class="form-control bg-white text-dark" id="message-text-for-inductionUser" rows="2"
+                              placeholder="Enter your message here.."></textarea>
+                </div>
+                <div class="align-self-center">
+                    <button class="btn btn-primary border-white BtnHover text-center" id="post-message-for-inductionUser" data-toInductionUserId="@Model.Userid" type="button">
+                        <i class="bi bi-send"></i>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 
 
