--- a/ChatApp/Views/ChatApp/InductionUserList.cshtml
+++ b/ChatApp/Views/ChatApp/InductionUserList.cshtml
@@ -6,7 +6,7 @@
 @{
     Layout = null;
 }
-<div class="my-5">
+@* <div class="my-5">
 
     <table class="table text-light" id="inductionUserListTable">
         <thead class="bg-header">
@@ -14,7 +14,7 @@
                 <th scope="col">Name</th>
                 <th scope="col">Phone Number</th>
                 <th scope="col">Email</th>
-                @* <th scope="col">Action</th> *@
+              
             </tr>
         </thead>
         <tbody class="bg-light text-dark">
@@ -48,4 +48,30 @@
             
         </tbody>
     </table>
+</div> *@
+<div class="card inductionUserList">
+    <div class="card-body">
+        <h5 class="font-weight-bold mb-3 text-center text-lg-start">Induction Users</h5>
+        <ul class="list-unstyled mb-0">
+            @foreach (var user in Model)
+            {
+                <li class="p-2 border-bottom" style="background-color: #eee;">
+                    <a class="d-flex justify-content-between text-decoration-none ClickRowForInductionUser" data-InductionUserGUID="@user.Inductionuserguid">
+                        <div class="d-flex flex-row">
+                            <div class="rounded-circle d-flex align-self-center me-3 shadow-1-strong" style="width: 60px; height: 60px; background-color: #007bff; color: white; text-align: center; font-size: 24px;">
+                                <span class="mx-auto my-auto">@user.FirstName[0]@user.LastName[0]</span>
+                            </div>
+                            <div class="pt-1">
+                                <p class="fw-bold mb-0">@user.FirstName @user.LastName</p>
+                                <p class="small text-muted">@user.PhoneNumber</p>
+                            </div>
+                        </div>
+                        @* <div class="pt-1">
+                            <p class="small text-muted mb-1 ">Just now</p>
+                        </div> *@
+                    </a>
+                </li>
+            }
+        </ul>
+</div>
 </div>
