--- a/ChatApp/Views/ChatApp/UserList.cshtml
+++ b/ChatApp/Views/ChatApp/UserList.cshtml
@@ -6,7 +6,7 @@
 @{
     Layout = null;
 } 
-<div class="my-5">
+@* <div class="my-5">
 
     <table class="table text-dark " id="userListTable">
         <thead class="bg-header" >
@@ -14,7 +14,6 @@
                 <th class="priority-1" scope="col">Name</th>
                 <th class="priority-2" scope="col">Phone Number</th>
                 <th class="priority-3" scope="col">Email</th>
-                @* <th scope="col">Action</th> *@
             </tr>
         </thead>
         <tbody class="bg-light text-dark">
@@ -22,7 +21,6 @@
                 int item = 0;
                 @foreach (var user in Model.Skip(1))
                 {
-                    @* <tr class="ClickRow" data-UserGUID="@userGuidString"> *@
                     if(item%2 == 0)
                     {
                         <tr class="ClickRow bg-1" data-UserGUID="@user.GuidforUser">
@@ -45,4 +43,31 @@
             
         </tbody>
     </table>
+</div> *@
+<div class="card userlist">
+    <div class="card-body">
+        <h5 class="font-weight-bold mb-3 text-center text-lg-start">Users</h5>
+        <ul class="list-unstyled mb-0">
+        @foreach (var user in Model.Skip(1))
+        {
+            <li class="p-2 border-bottom" style="background-color: #eee;">
+                    <a class="d-flex justify-content-between text-decoration-none ClickRow" data-UserGUID="@user.GuidforUser">
+                    <div class="d-flex flex-row">
+                        <div class="rounded-circle d-flex align-self-center me-3 shadow-1-strong" style="width: 60px; height: 60px; background-color: #007bff; color: white; text-align: center; font-size: 24px;">
+                            <span class="mx-auto my-auto">@user.FirstName[0]@user.LastName[0]</span>
+                        </div>
+                        <div class="pt-1">
+                            <p class="fw-bold mb-0">@user.FirstName @user.LastName</p>
+                            <p class="small text-muted">(@user.PhoneNumber)</p>
+                        </div>
+                    </div>
+                    @* <div class="pt-1">
+                        <p class="small text-muted mb-1 EmailAdd">@user.Email</p>
+                        <span class="badge bg-danger float-end">1</span>
+                    </div> *@
+                </a>
+            </li>
+        }
+        </ul>
+</div>
 </div>
